Only use signingconfigs when environment settings are set

--- a/build.gradle
+++ b/build.gradle
@@ -54,12 +54,7 @@ android {
     }
 
     signingConfigs {
-        release {
-            storeFile file(System.getenv("key.store"))
-            storePassword System.getenv("key.store.password")
-            keyAlias System.getenv("key.alias")
-            keyPassword System.getenv("key.alias.password")
-        }
+        release
     }
 
     buildTypes {
@@ -68,7 +63,6 @@ android {
             debuggable true
         }
         release {
-            signingConfig signingConfigs.release
         }
     }
 
@@ -132,4 +126,17 @@ task cleanNative(type: Delete) {
     delete 'ext/syncthing/pkg/'
 }
 clean.dependsOn cleanNative
+
+allprojects {
+    afterEvaluate { project ->
+        def configName = 'release'
+        if (System.getenv("key.alias")) {
+            android.signingConfigs[configName].storeFile = file(System.getenv("key.store"))
+            android.signingConfigs[configName].storePassword = System.getenv("key.store.password")
+            android.signingConfigs[configName].keyAlias = System.getenv("key.alias")
+            android.signingConfigs[configName].keyPassword = System.getenv("key.alias.password")
+            android.buildTypes.release.signingConfig = android.signingConfigs[configName]
+        }
+    }
+}
 
